index con styles falta darle style a las recipes

--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
-<body>
-    <h1>Recetas de Odin</h1>
+<body id="bodyindex">
+    <h1 class="indexh1">Recetas de Odin</h1>
         
-          <img src="/home/nico/repos/img/fuente.webp" alt="Pizza"><br>
-          <a href="recipes/banana.html">Receta Pastel de Bananas</a><br>
-          <a href="recipes/hambur.html">Receta Hamburguecitas</a><br>
-          <a href="recipes/peras.html">Receta Pastel de peras</a><br>
-            
+          <img class="img1" src="img/fuente.webp" alt="Pizza"><br>
+
+          <div class="div-index">
+            <ul id="ulist">
+          <li><a href="recipes/banana.html">Receta Pastel de Bananas</a></li>
+          <li><a href="recipes/hambur.html">Receta Hamburguecitas</a></li>
+          <li><a href="recipes/peras.html">Receta Pastel de peras</a></li>
+        </ul>
+        </div>
 </body>
 </html>
