--- a/recipes/banana.html
+++ b/recipes/banana.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 <body>
   <h1>Pastel de banana</h1> 
-  <img src="/home/nico/repos/img/bananapastel.webp" alt="pastel de banana"> 
+  <img src="../img/bananapastel.webp" alt="pastel de banana"> 
   <h2>Descripción</h2>
           <p>Este es el pastel de banana hawaiano,<br>especial para comer en las fiestas.</p>
           
@@ -26,3 +27,4 @@
     </ul>   
 </body>
 </html>
+<!--<img src="/home/nico/repos/img/bananapastel.webp" alt="pastel de banana"> -->
