--- a/recipes/hambur.html
+++ b/recipes/hambur.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hamburguesitas</h1> 
-    <img src="/home/nico/repos/img/hamburguesitas.webp" alt="hamburguesas"> 
+    <img src="../img/hamburguesitas.webp" alt="hamburguesas"> 
     <h2>Descripción</h2>
             <p>Estas son hamburguesitas con queso,<br>especial para comer en familia.</p>
             
