--- a/recipes/peras.html
+++ b/recipes/peras.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pastel de Peras</h1> 
-    <img src="/home/nico/repos/img/pasteldeperas.webp" alt="pastel de peras"> 
+    <img src="../img/pasteldeperas.webp" alt="pastel de peras"> 
     <h2>Descripción</h2>
             <p>Este es el magnifico pastel de peras estilo Irlandés<br>
             especial para comer entre amigos y compartirle al vecino.</p>
